add ffm implementation