@@ -10,24 +10,27 @@
  *-------------------------------------------------------------------------
  */
 
-
-package org.weaverdb;
+package org.weaverdb.direct;
 
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
+import org.weaverdb.StreamingTransformer;
 
-class StreamingTransformer17 implements StreamingTransformer {
-    private final ExecutorService vpool = Executors.newCachedThreadPool();
+
+class StreamingTransformer25 implements StreamingTransformer {
+    
+    ExecutorService vpool = Executors.newVirtualThreadPerTaskExecutor();
 
     @Override
-    public void close()  {
-        vpool.shutdown();
+    public void close() {
+        vpool.shutdownNow();
     }
-    
+
     @Override
     public <T> Future<T> schedule(Callable<T> work) {
         return vpool.submit(work);
     }
+    
 }
